# gp_logging_PY

./: pyproject.toml
gp_logging/: gp_logging.py
tests/: test_core.py
